--- a/src/main/resources/templates/studentEnrollmentSummary.html
+++ b/src/main/resources/templates/studentEnrollmentSummary.html
@@ -1,7 +1,7 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>
+    <title>Create a New Student Page</title>
         <html>
         <head>
             <meta charset="utf-8">
@@ -15,7 +15,7 @@
     <th:block th:text="${courseName}"></th:block>
     <ul>
         <li th:each="student : ${students}">
-            <th:block th:text="${student.name} ${student.surname}"></th:block>
+            <th:block th:text="${student.name}"></th:block> <th:block th:text="${student.surname}"></th:block>
         </li>
     </ul>
     <a href="/listCourses">Back</a>
