--- a/src/main/resources/templates/studentEnrollmentSummary.html
+++ b/src/main/resources/templates/studentEnrollmentSummary.html
@@ -17,6 +17,11 @@
         <li th:each="student : ${students}">
             <th:block th:text="${student.name}"></th:block> <th:block th:text="${student.surname}"></th:block>
         </li>
+<!--        <li th:each="grade : ${grades}">-->
+<!--            <th:block th:text="${grade.student}"></th:block> <th:block th:text="${grade.student}">&ndash;&gt;-->
+<!--            <th:block th:text="${grade.grade}">-->
+<!--        </th:block>-->
+<!--        </li>-->
     </ul>
     <a href="/listCourses">Back</a>
 </section>
