--- a/src/main/resources/templates/listCourses.html
+++ b/src/main/resources/templates/listCourses.html
@@ -29,27 +29,36 @@
             <th:block th:text="${course.name}"></th:block>
 
             <form th:method="PUT" th:action="@{'/courses/edit-form/{id}' (id=${course.id})}">
-                <th:block th:if="${#request.getRemoteUser() != null}"> <button type="submit" class="btn btn-sm btn-danger">Edit</button></th:block>
+                <th:block th:if="${#request.getRemoteUser() != null}"> <button id="edit" type="submit" class="btn btn-sm btn-danger">Edit</button></th:block>
             </form>
 
             <form th:method="DELETE" th:action="@{'/courses/delete/{id}' (id=${course.id})}">
-                <th:block th:if="${#request.getRemoteUser() != null}"><button type="submit" class="btn btn-sm btn-danger">Delete</button> </th:block>
+                <th:block th:if="${#request.getRemoteUser() != null}"><button id="delete" type="submit" class="btn btn-sm btn-danger">Delete</button> </th:block>
+            </form>
+
+            <form th:method="POST" th:action="@{'/courses/open-course/{id}' (id=${course.id})}">
+<!--                <th:block th:if="${#request.getRemoteUser() != null}">-->
+                    <input id="open-course" type="submit" value="Open Course">
+<!--                </th:block>-->
             </form>
         </li>
     </ul>
 
-    <hr>
-    <h3>Choose a course to add a student</h3>
-    <form th:method="POST" th:action="@{/listCourses}">
-        <ul>
-            <li th:each="course :  ${courses}">
-                <input type="radio" name="courseId" th:value="${course.id}"/>
-                <th:block th:text="${course.name}"></th:block>
-            </li>
-        </ul>
-        <br/>
-        <th:block th:if="${#request.getRemoteUser() != null}"><input type="submit" value="Add Student"></th:block>
-    </form>
+<!--    <hr>-->
+<!--    <h3>Choose a course to add a student</h3>-->
+<!--    <form th:method="POST" th:action="@{'/courses/open-course/{id}' (id=${course.id})}">-->
+<!--        <ul>-->
+<!--            <li th:each="course :  ${courses}">-->
+<!--                <input type="radio" name="courseId" th:value="${course.id}"/>-->
+<!--                <th:block th:text="${course.name}"></th:block>-->
+
+<!--                <form th:method="POST" th:action="@{'/courses/open-course/{id}' (id=${course.id})}">-->
+<!--                    <th:block th:if="${#request.getRemoteUser() != null}"><input type="submit" value="Add Student"></th:block>-->
+<!--                </form>-->
+
+<!--            </li>-->
+<!--        </ul>-->
+<!--        <br/>-->
 
 </main>
 </body>
